[package]
name = "vox_box"
version = "0.3.0"
authors = ["Andrew Smith <andrewchristophersmith@gmail.com>"]
include = ["src/**/*.rs", "Cargo.toml"]
description = "A tool to process speech audio in Rust"
documentation = "http://www.andrewchristophersmith.com/docs/vox_box/vox_box/index.html"
repository = "https://github.com/andrewcsmith/vox_box.rs"
readme = "README.md"
keywords = ["audio", "fft", "nlp"]
license = "MIT"
edition = "2018"

[dependencies]
num = "0.1"
rand = "0.3"
libc = "0.2"
rustfft = { git = "https://github.com/abdul-rehman0/RustFFT" }
sample = "0.9"
num-complex = "0.2.3"

[dev-dependencies]
hound = "2.0"

[features]
nightly = []
